[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Vergil-SLI <sli23@choate.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
